Iniciando configuracoes do Service com conexao configuration

--- a/CrudDapper/appsettings.json
+++ b/CrudDapper/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CrudDapper; User ID=sa; Password=Smartwatch2#; trusted_connection=true; TrustServerCertificate=True"
+  }
 }
