--- a/CrudDapper/appsettings.json
+++ b/CrudDapper/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CrudDapper; User ID=sa; Password=Smartwatch2#; trusted_connection=true; TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=CrudDapper;User ID=sa;Password=Smartwatch2#;TrustServerCertificate=True"
   }
 }
